@@ -149,6 +149,8 @@ public class SimpleFacets {
     threads = -1;
 
     if (localParams == null) {
+      params = orig;
+      required = new RequiredSolrParams(params);
       return;
     }
     params = SolrParams.wrapDefaults(localParams, orig);
